[gd_scene load_steps=10 format=3 uid="uid://b1n403g7mt7v"]

[ext_resource type="Script" path="res://scenes/dialogues/dialogue_options/dialogue_option_button.gd" id="1_pf4e6"]
[ext_resource type="FontFile" uid="uid://4tm0c5wp0em8" path="res://scenes/dialogues/dialogue_box/PixelizerBold.ttf" id="2_i2bum"]

[sub_resource type="Theme" id="Theme_jot4c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_041i3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pj8nb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3rso6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uq3ba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ofd6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v8ypm"]

[node name="DialogueOption" type="MarginContainer"]
custom_minimum_size = Vector2(500, 50)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 1000.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 5
script = ExtResource("1_pf4e6")
hoveredModulateColor = Color(0.993286, 1, 0.785156, 1)
pressedModulateColor = Color(0.983333, 1, 0.5, 1)

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_jot4c")
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxEmpty_041i3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_pj8nb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3rso6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uq3ba")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7ofd6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v8ypm")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("2_i2bum")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Это примерный вариант, который я хочу выбрать.[/center]"
fit_content = true
scroll_active = false

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
